/request/user_resource_paths and /request/user (#5)
